--- a/MyShop/MyShop.WebUI/Views/ProductManager/Index.cshtml
+++ b/MyShop/MyShop.WebUI/Views/ProductManager/Index.cshtml
@@ -11,6 +11,7 @@
 </p>
 <table class="table">
     <tr>
+        <th></th>
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
@@ -21,9 +22,6 @@
             @Html.DisplayNameFor(model => model.Category)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Image)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Price)
         </th>
         <th></th>
@@ -32,6 +30,9 @@
 @foreach (var item in Model) {
     <tr>
         <td>
+            <img class="img-thumbnail" style="height:50px" src="~/Content/ProductImages/@item.Image" />
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
@@ -39,9 +40,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Category)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Image)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Price)
